test/good/loops/for11.px

for t in 0.0..5.0, 'z'..'a', 0.0...-5.0 step 5/2, -2, -1.5 do
    print t
