test/bad/loops/for19.px

for x in 0...10 by 5, 'a'..'z' by '5' do
    skip
